--- a/lab5/app/build.gradle
+++ b/lab5/app/build.gradle
@@ -22,6 +22,9 @@ repositories {
 dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:31.1-jre'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.12.5'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.6"
 }
 
 task testing {
