--- a/lab5/app/build.gradle
+++ b/lab5/app/build.gradle
@@ -12,6 +12,7 @@ plugins {
     id "java"
     id 'java-library'
     id 'application'
+    id 'com.github.johnrengelman.shadow' version '2.0.2'
 }
 
 repositories {
@@ -42,6 +43,11 @@ run {
     classpath = sourceSets.main.runtimeClasspath
     standardInput = System.in
     environment 'JAVA_VAR', 'collection.json'
+}
+jar {
+    manifest {
+        attributes 'Main-Class': 'app.App'
+    }
 }
 
 
