часть javadoc, фикс рекурсии execute_script, help

--- a/lab5/app/build.gradle
+++ b/lab5/app/build.gradle
@@ -49,6 +49,9 @@ jar {
         attributes 'Main-Class': 'app.App'
     }
 }
+javadoc {
+    options.addBooleanOption('html5', true)
+}
 
 
 // task runApp(type: JavaExec) {
