--- a/lab6/client/build.gradle
+++ b/lab6/client/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'ifmo'
@@ -12,8 +13,11 @@ repositories {
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.12.5'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.8.6"
 }
 
 test {
-    useJUnitPlatform()
+    //useJUnitPlatform()
 }
