--- a/lab6/server/build.gradle
+++ b/lab6/server/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'ifmo'
@@ -18,5 +19,5 @@ dependencies {
 }
 
 test {
-    useJUnitPlatform()
+    //useJUnitPlatform()
 }
