--- a/lab8/app/build.gradle
+++ b/lab8/app/build.gradle
@@ -1,8 +1,8 @@
 plugins {
     id 'java'
     id 'application'
-    id 'com.github.johnrengelman.shadow' version '8.1.1'
-    id 'org.openjfx.javafxplugin' version "0.0.14"
+    // id 'com.github.johnrengelman.shadow' version '8.1.1'
+    id 'org.openjfx.javafxplugin' version "0.0.10"
 }
 
 group 'ifmo'
@@ -43,4 +43,15 @@ javafx {
 
 test {
     //useJUnitPlatform()
+}
+sourceSets {
+        main {
+                java {
+                        srcDirs= ["src/main/java"]
+                }
+                resources {
+                        srcDirs= ["src/main/resources"]
+                        include "Auth.fxml"
+                }
+        }
 }
