--- a/lab8/app/build.gradle
+++ b/lab8/app/build.gradle
@@ -51,7 +51,7 @@ sourceSets {
                 }
                 resources {
                         srcDirs= ["src/main/resources"]
-                        include "Auth.fxml"
+                        include "Auth.fxml", "Table.fxml"
                 }
         }
 }
