--- a/lab8/app/build.gradle
+++ b/lab8/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'application'
     // id 'com.github.johnrengelman.shadow' version '8.1.1'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
     id 'org.openjfx.javafxplugin' version "0.0.10"
 }
 
